--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American poetry -- 19th century'
 - !lcc 'PS'
+- GITenberg
 title: The Black Riders, and Other Lines
 url: http://www.gutenberg.org/ebooks/40786
